--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -6,7 +6,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"E:/Unity projects/RPG Course/rpgProject/docs;E:/Unity projects/RPG Course/rpgProject/Docs;C:/Users/tracy/Documents/Unity Courses/RPG Course/rpgProject/Game Demo;;;;;;;\"}"
+                "value": "{\"m_Value\":\"E:/Unity projects/RPG Course/rpgProject/docs;C:/Users/tracy/Documents/Unity Courses/RPG Course/rpgProject/Game Demo;;;;;;;;\"}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
